make it harder to use the API wrongly, tdf#95056

Change-Id: I07129285ac7f00513802a60c31d5de27f6f4a5d6