chart2/source/controller/sidebar/ChartErrorBarPanel.cxx
@@ -45,6 +45,12 @@ namespace chart { namespace sidebar {
 
 namespace {
 
+enum class ErrorBarDirection
+{
+    POSITIVE,
+    NEGATIVE
+};
+
 css::uno::Reference<css::beans::XPropertySet> getErrorBarPropSet(
         css::uno::Reference<css::frame::XModel> xModel, const OUString& rCID)
 {
@@ -175,7 +181,7 @@ void setTypePos(css::uno::Reference<css::frame::XModel> xModel,
 }
 
 double getValue(css::uno::Reference<css::frame::XModel> xModel,
-        const OUString& rCID, bool bNeg)
+        const OUString& rCID, ErrorBarDirection eDir)
 {
     css::uno::Reference<css::beans::XPropertySet> xPropSet =
         getErrorBarPropSet(xModel, rCID);
@@ -184,7 +190,7 @@ double getValue(css::uno::Reference<css::frame::XModel> xModel,
         return 0;
 
     OUString aName = "PositiveError";
-    if (bNeg)
+    if (eDir == ErrorBarDirection::NEGATIVE)
         aName = "NegativeError";
 
     css::uno::Any aAny = xPropSet->getPropertyValue(aName);
@@ -199,7 +205,7 @@ double getValue(css::uno::Reference<css::frame::XModel> xModel,
 }
 
 void setValue(css::uno::Reference<css::frame::XModel> xModel,
-        const OUString& rCID, double nVal, bool bPos)
+        const OUString& rCID, double nVal, ErrorBarDirection eDir)
 {
     css::uno::Reference<css::beans::XPropertySet> xPropSet =
         getErrorBarPropSet(xModel, rCID);
@@ -208,7 +214,7 @@ void setValue(css::uno::Reference<css::frame::XModel> xModel,
         return;
 
     OUString aName = "PositiveError";
-    if (!bPos)
+    if (eDir == ErrorBarDirection::NEGATIVE)
         aName = "NegativeError";
 
     xPropSet->setPropertyValue(aName, css::uno::makeAny(nVal));
@@ -337,8 +343,8 @@ void ChartErrorBarPanel::updateData()
         else
             mpMFNeg->Disable();
 
-        double nValPos = getValue(mxModel, aCID, true);
-        double nValNeg = getValue(mxModel, aCID, false);
+        double nValPos = getValue(mxModel, aCID, ErrorBarDirection::POSITIVE);
+        double nValNeg = getValue(mxModel, aCID, ErrorBarDirection::NEGATIVE);
 
         mpMFPos->SetValue(nValPos);
         mpMFNeg->SetValue(nValNeg);
@@ -428,9 +434,9 @@ IMPL_LINK_TYPED(ChartErrorBarPanel, NumericFieldHdl, Edit&, rMetricField, void)
     OUString aCID = getCID(mxModel);
     double nVal = static_cast<NumericField&>(rMetricField).GetValue();
     if (&rMetricField == mpMFPos.get())
-        setValue(mxModel, aCID, nVal, true);
+        setValue(mxModel, aCID, nVal, ErrorBarDirection::POSITIVE);
     else if (&rMetricField == mpMFNeg.get())
-        setValue(mxModel, aCID, nVal, false);
+        setValue(mxModel, aCID, nVal, ErrorBarDirection::NEGATIVE);
 }
 
 }} // end of namespace ::chart::sidebar
